k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - dev.qosmo.co.kr
      secretName: dev-tls
  rules:
    - host: dev.qosmo.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-nginx
                port:
                  number: 80
